# CopaSpringsEngine

./: Animation.cc  Animation.hh  CMakeLists.txt  Graphics.cc  Graphics.hh  Image.cc  Image.hh  Particles.cc  Particles.hh  Physics.cc  Physics.hh  README.md  Sprites.cc  Sprites.hh  State.cc  State.hh  Window.cc  Window.hh  test.cc
src/: Animation.cc  Animation.hh  Audio.cc  Audio.h  CMakeLists.txt  Camera.cc  Camera.h  Camera.hh  Engine.cc  Engine.h  Engine.hh  GameObject.cc  GameObject.h  Graphics.cc  Graphics.h  Graphics.hh  Image.cc  Image.h  Image.hh  Layer.cc  Layer.hh  Particles.cc  Particles.hh  README  Sprites.cc  Sprites.hh  State.cc  State.hh  Window.cc  Window.h  Window.hh  World.cc  World.h  World.hh  test.cc
src/camera/: Camera.cc  Camera.h  FollowingCamera.cc  FollowingCamera.h
src/components/: CMakeLists.txt  Camera.cc  Camera.h  Emitter.cc  Emitter.h  Physics.h  Spritesheet.cc  Spritesheet.h
src/core/: CMakeLists.txt  Engine.cc  Engine.h  GameObject.cc  GameObject.h  World.cc  World.h
src/deprecated/: CMakeLists.txt  Sprite.cc  Sprite.h
src/graphics/: CMakeLists.txt  Graphics.cc  Graphics.h  Window.h
src/media/: Audio.h  CMakeLists.txt  Image.cc  Image.h
src/particle/: Emitter.cc  Emitter.h  Emitter.hh  Particle.cc  Particle.h  Particle.hh
src/sprite/: Sprite.cc  Sprite.h  Sprite.hh  Spritesheet.cc  Spritesheet.h  Spritesheet.hh
src/types/: DynamicArray.h  StaticArray.cc  StaticArray.h
src/util/: CMakeLists.txt  ConfigFile.cc  ConfigFile.h  ConfigFile.hh
src/utils/: ConfigFile.cc  ConfigFile.hh
