set(camera_srcs Camera)
add_library(camera ${camera_srcs})

set(emitter_srcs Emitter)
add_library(emitter ${emitter_srcs})

set(input_srcs Input)
add_library(input ${input_srcs})

set(physics_srcs Physics)
add_library(physics ${physics_srcs})

set(spritesheet_srcs Spritesheet)
add_library(spritesheet ${spritesheet_srcs})